@@ -5,6 +5,9 @@
 @section v2_10 Changes with libapreq2-2.10 (under developement)
 
 - C API [joes]
+  Add optional interface for apreq_handle_apache2().
+
+- C API [joes]
   Clean up buggy apreq_hook_find_param().
 
 - Perl Glue Build [Philip M. Gollucci]
